--- a/02.nginx.php.mysql.5.7/docker/docker-compose.yml
+++ b/02.nginx.php.mysql.5.7/docker/docker-compose.yml
@@ -50,6 +50,18 @@ services:
         networks:
             bridge.66.6:
                 ipv4_address: 66.6.0.3
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        container_name: phpmyadmin
+        ports: 
+            - "8080:80"
+        environment:
+            - PMA_HOST=mysql.5.7
+        networks:
+            bridge.66.6:
+                ipv4_address: 66.6.0.4
+        depends_on:
+            - mysql.5.7
 
 networks:
     bridge.66.6:
