--- a/05.wso2/docker-compose.yml
+++ b/05.wso2/docker-compose.yml
@@ -9,25 +9,25 @@ services:
             - "8243:8243"
             - "9443:9443"
 
-    analytics-dashboard:
-        image: wso2/wso2ei-analytics-dashboard
-        container_name: analytics-dashboard
-        ports:
-            - "9713:9713"
-            - "9643:9643"
-            - "9613:9613"
-            - "7713:7713"
-            - "7613:7613"
+    # analytics-dashboard:
+    #     image: wso2/wso2ei-analytics-dashboard
+    #     container_name: analytics-dashboard
+    #     ports:
+    #         - "9713:9713"
+    #         - "9643:9643"
+    #         - "9613:9613"
+    #         - "7713:7713"
+    #         - "7613:7613"
     
-    analytics-worker:
-        image: wso2/wso2ei-analytics-worker
-        container_name: analytics-worker
-        ports:
-            - "9091:9091"
-            - "9444:9444"
-            - "9712:9712"
-            - "9612:9612"
-            - "7712:7712"
-            - "7612:7612"
-            - "7070:7070"
-            - "7443:7443"
+    # analytics-worker:
+    #     image: wso2/wso2ei-analytics-worker
+    #     container_name: analytics-worker
+    #     ports:
+    #         - "9091:9091"
+    #         - "9444:9444"
+    #         - "9712:9712"
+    #         - "9612:9612"
+    #         - "7712:7712"
+    #         - "7612:7612"
+    #         - "7070:7070"
+    #         - "7443:7443"
