--- a/06.apache.php.mysql/docker/docker-compose.yml
+++ b/06.apache.php.mysql/docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
             bridge.66.6:
                 ipv4_address: 66.6.0.5
     php:
+        build: './php/'
         image: php:7-fpm-buster
         container_name: php
         volumes:
@@ -34,6 +35,8 @@ services:
 
     apache:
         container_name: apache
+        volumes: 
+            - "../app01:/var/www/html"
         ports:
             - "80:80"
             - "443:443"
@@ -45,6 +48,7 @@ services:
         networks:
             bridge.66.6:
                 ipv4_address: 66.6.0.3
+
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
         container_name: phpmyadmin
