--- a/06.apache.php.mysql/docker/apache/Dockerfile
+++ b/06.apache.php.mysql/docker/apache/Dockerfile
@@ -3,6 +3,6 @@ FROM httpd
 RUN apk update; \
     apk upgrade;
 
-COPY  demo.apache.conf
-
-EXPOSE 80 443
+COPY demo.apache.conf /usr/local/apache2/conf/demo.apache.conf
+RUN echo "Include /usr/local/apache2/conf/demo.apache.conf" \
+    >> /usr/local/apache2/conf/httpd.conf
