--- a/12.RedmineVolume.IP.Fixo/docker/docker-compose.yml
+++ b/12.RedmineVolume.IP.Fixo/docker/docker-compose.yml
@@ -20,6 +20,9 @@ services:
         environment:
             - MYSQL_ROOT_PASSWORD=my-password
             - MYSQL_DATABASE=redmine
+        networks:
+            bridge.66.6:
+                ipv4_address: 66.6.0.5
 
     redmine:
         build: 
@@ -36,6 +39,9 @@ services:
         volumes:
             - redmine:/usr/src/redmine/files
         env_file: .env
+        networks:
+            bridge.66.6:
+                ipv4_address: 66.6.0.10
         depends_on:
             - mysql.5.7
 
@@ -47,8 +53,18 @@ services:
             - "8081:80"
         environment:
             - PMA_HOST=mysql.5.7
+        networks:
+            bridge.66.6:
+                ipv4_address: 66.6.0.4
         depends_on:
             - mysql.5.7
+
+networks:
+    bridge.66.6:
+        ipam:
+            driver: default
+            config:
+                - subnet: "66.6.0.0/24"
 
 volumes:
     mysql.5.7:
