--- a/12.RedmineVolume.IP.Fixo/docker/docker-compose.yml
+++ b/12.RedmineVolume.IP.Fixo/docker/docker-compose.yml
@@ -2,13 +2,7 @@ version: '3.8'
 
 services:
     mysql.5.7:
-        build:
-            context: './mysql/'
-            dockerfile: 'Dockerfile'
-            args:
-                buildno: 1
-            labels: 
-                description: "mysqlmysql"
+        image: mysql:5.7
         container_name: mysql.5.7
         restart: always
         ports:
@@ -25,13 +19,7 @@ services:
                 ipv4_address: 66.6.0.5
 
     redmine:
-        build: 
-            context: './redmine/'
-            dockerfile: 'Dockerfile'
-            args:
-                buildno: 1
-            labels: 
-                description: "redred"
+        image: redmine
         container_name: redmine
         restart: always
         ports:
