--- a/13.MySQL.phpmyAdmin/docker/.env
+++ b/13.MySQL.phpmyAdmin/docker/.env
@@ -1,4 +1,4 @@
 REDMINE_DB_MYSQL=mysql.5.7
 REDMINE_DB_USERNAME=root
 REDMINE_DB_PASSWORD=my-password
-REDMINE_SECRET_KEY_BASE: supersecretkey
+REDMINE_SECRET_KEY_BASE=supersecretkey
