--- a/06.apache.php.mysqli.pdo.rewrite/docker/docker-compose.yml
+++ b/06.apache.php.mysqli.pdo.rewrite/docker/docker-compose.yml
@@ -4,12 +4,16 @@ services:
     mysql.5.7:
         image: mysql:5.7
         container_name: mysql.5.7
+        restart: always
         ports:
             - "3306:3306"
         volumes:
             - mysql.5.7:/var/lib/mysql
+            - ./mysql:/tmp/database
+        command: mysqld --init-file="/tmp/database/init.sql"
         environment:
             - MYSQL_ROOT_PASSWORD=my-password
+            - MYSQL_DATABASE=redmine
         networks:
             bridge.66.6:
                 ipv4_address: 66.6.0.5
@@ -22,6 +26,7 @@ services:
             labels: 
                 description: "phhh"
         container_name: php
+        restart: always
         ports:
             - "80:80"
         volumes:
@@ -38,6 +43,7 @@ services:
         container_name: phpmyadmin
         ports: 
             - "8081:80"
+        restart: always
         environment:
             - PMA_HOST=mysql.5.7
         networks:
