--- a/12.RedmineVolume.IP.Fixo/docker/docker-compose.yml
+++ b/12.RedmineVolume.IP.Fixo/docker/docker-compose.yml
@@ -9,8 +9,8 @@ services:
             - "3306:3306"
         volumes:
             - mysql.5.7:/var/lib/mysql
-            - ./mysql/sql-scripts:/tmp/database
-        command: mysqld --init-file="/tmp/database/redmine.sql"
+            - ./mysql:/tmp/database
+        command: mysqld --init-file="/tmp/database/init.sql"
         environment:
             - MYSQL_ROOT_PASSWORD=my-password
             - MYSQL_DATABASE=redmine
@@ -38,7 +38,7 @@ services:
         container_name: phpmyadmin
         restart: always
         ports: 
-            - "8081:80"
+            - "8080:80"
         environment:
             - PMA_HOST=mysql.5.7
         networks:
