--- a/07.Redmine.IP.Fixo/docker/docker-compose.yml
+++ b/07.Redmine.IP.Fixo/docker/docker-compose.yml
@@ -2,20 +2,15 @@ version: '3.8'
 
 services:
     mysql.5.7:
-        build:
-            context: './mysql/'
-            dockerfile: 'Dockerfile'
-            args:
-                buildno: 1
-            labels: 
-                description: "mysqlmysql"
+        image: mysql:5.7
         container_name: mysql.5.7
+        restart: always
         ports:
             - "3306:3306"
         volumes:
             - mysql.5.7:/var/lib/mysql
-            - ./mysql/sql-scripts:/tmp/database
-        command: mysqld --init-file="/tmp/database/redmine.sql"
+            - ./mysql:/tmp/database
+        command: mysqld --init-file="/tmp/database/init.sql"
         environment:
             - MYSQL_ROOT_PASSWORD=my-password
             - MYSQL_DATABASE=redmine
@@ -23,14 +18,9 @@ services:
             bridge.66.6:
                 ipv4_address: 66.6.0.5
     redmine:
-        build: 
-            context: './redmine/'
-            dockerfile: 'Dockerfile'
-            args:
-                buildno: 1
-            labels: 
-                description: "redred"
+        image: redmine
         container_name: redmine
+        restart: always
         ports:
             - "80:3000"
         env_file: .env
@@ -43,8 +33,9 @@ services:
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
         container_name: phpmyadmin
+        restart: always
         ports: 
-            - "8081:80"
+            - "8080:80"
         environment:
             - PMA_HOST=mysql.5.7
         networks:
