--- a/10.RedmineVolume/docker/docker-compose.yml
+++ b/10.RedmineVolume/docker/docker-compose.yml
@@ -2,33 +2,21 @@ version: '3.8'
 
 services:
     mysql.5.7:
-        build:
-            context: './mysql/'
-            dockerfile: 'Dockerfile'
-            args:
-                buildno: 1
-            labels: 
-                description: "mysqlmysql"
+        image: mysql:5.7
         container_name: mysql.5.7
         restart: always
         ports:
             - "3306:3306"
         volumes:
             - mysql.5.7:/var/lib/mysql
-            - ./mysql/sql-scripts:/tmp/database
-        command: mysqld --init-file="/tmp/database/redmine.sql"
+            - ./mysql:/tmp/database
+        command: mysqld --init-file="/tmp/database/init.sql"
         environment:
             - MYSQL_ROOT_PASSWORD=my-password
             - MYSQL_DATABASE=redmine
 
     redmine:
-        build: 
-            context: './redmine/'
-            dockerfile: 'Dockerfile'
-            args:
-                buildno: 1
-            labels: 
-                description: "redred"
+        image: redmine
         container_name: redmine
         restart: always
         ports:
@@ -44,7 +32,7 @@ services:
         container_name: phpmyadmin
         restart: always
         ports: 
-            - "8081:80"
+            - "8080:80"
         environment:
             - PMA_HOST=mysql.5.7
         depends_on:
