--- a/17.wso2.docker-apim-master/docker-compose/apim-with-analytics/dockerfiles/apim-analytics-dashboard/Dockerfile
+++ b/17.wso2.docker-apim-master/docker-compose/apim-with-analytics/dockerfiles/apim-analytics-dashboard/Dockerfile
@@ -17,7 +17,8 @@
 # ------------------------------------------------------------------------
 
 # set base Docker image to WSO2 API Manager Analytics Dashboard Docker image with latest WSO2 Updates
-FROM docker.wso2.com/wso2am-analytics-dashboard:3.2.0
+FROM wso2/wso2am-analytics-dashboard:3.2.0
+
 LABEL maintainer="WSO2 Docker Maintainers <dev@wso2.org>"
 
 # build arguments for external artifacts
