--- a/18.wso2.compose-version-3/docker-compose.yml
+++ b/18.wso2.compose-version-3/docker-compose.yml
@@ -44,9 +44,9 @@ services:
       interval: 10s
       start_period: 20s
       retries: 5
-    depends_on:
-      mysql:
-        condition: service_healthy
+    #depends_on:
+      #mysql:
+        #condition: service_healthy
     volumes:
       - ./conf/apim-analytics-worker:/home/wso2carbon/wso2-config-volume
   api-manager:
@@ -56,11 +56,11 @@ services:
       interval: 10s
       start_period: 180s
       retries: 20
-    depends_on:
-      mysql:
-        condition: service_healthy
-      am-analytics-worker:
-        condition: service_healthy
+    #depends_on:
+      #mysql:
+        #condition: service_healthy
+      #am-analytics-worker:
+        #condition: service_healthy
     volumes:
       - ./conf/apim:/home/wso2carbon/wso2-config-volume
     ports:
@@ -76,10 +76,10 @@ services:
       interval: 10s
       retries: 5
       start_period: 20s
-    depends_on:
-      mysql:
-        condition: service_healthy
-      api-manager:
-        condition: service_healthy
+    #depends_on:
+      #mysql:
+        #condition: service_healthy
+      #api-manager:
+        #condition: service_healthy
     volumes:
       - ./conf/apim-analytics-dashboard:/home/wso2carbon/wso2-config-volume
