--- a/18.wso2.compose-version-3/conf/apim-analytics-worker/conf/worker/deployment.yaml
+++ b/18.wso2.compose-version-3/conf/apim-analytics-worker/conf/worker/deployment.yaml
@@ -437,7 +437,7 @@ siddhi:
         name: 'grpcSource'
         type: 'grpc'
         properties:
-          receiver.url : grpc://localhost:9806/org.wso2.analytics.mgw.grpc.service.AnalyticsSendService/sendAnalytics
+          receiver.url : grpc://tcnct-philco:9806/org.wso2.analytics.mgw.grpc.service.AnalyticsSendService/sendAnalytics
   extensions:
     -
       extension:
@@ -517,9 +517,9 @@ auth.configs:
   #deployment.config:
   #  type: ha
   #  eventSyncServer:
-  #    host: localhost
+  #    host: tcnct-philco
   #    port: 9893
-  #    advertisedHost: localhost
+  #    advertisedHost: tcnct-philco
   #    advertisedPort: 9893
   #    bossThreads: 10
   #    workerThreads: 10
