--- a/18.wso2.compose-version-3/conf/apim-analytics-dashboard/conf/dashboard/deployment.yaml
+++ b/18.wso2.compose-version-3/conf/apim-analytics-dashboard/conf/dashboard/deployment.yaml
@@ -325,7 +325,7 @@ wso2.business.rules.manager:
   deployment_configs:
     -
       # <IP>:<HTTPS Port> of the Worker node
-      tcnct-philco:9444:
+      lab-106:9444:
         # UUIDs of rule templates that are needed to be deployed on the node
         - stock-data-analysis
         - stock-exchange-input
@@ -385,18 +385,18 @@ auth.configs:
     adminUsername: admin
     adminPassword: admin
     kmDcrUrl: https://api-manager:9443/client-registration/v0.17/register
-    kmTokenUrlForRedirection: https://tcnct-philco:9443/oauth2
+    kmTokenUrlForRedirection: https://lab-106:9443/oauth2
     kmTokenUrl: https://api-manager:9443/oauth2
     kmUsername: admin
     kmPassword: admin
     portalAppContext: analytics-dashboard
     businessRulesAppContext : business-rules
     cacheTimeout: 30
-    baseUrl: https://tcnct-philco:9643
+    baseUrl: https://lab-106:9643
     grantType: authorization_code
     publisherUrl: https://api-manager:9443
     devPortalUrl: https://api-manager:9443
-    externalLogoutUrl: https://tcnct-philco:9443/oidc/logout
+    externalLogoutUrl: https://lab-106:9443/oidc/logout
 
 wso2.dashboard:
   roles:
