--- a/18.wso2.compose-version-3/conf/apim/repository/conf/deployment.toml
+++ b/18.wso2.compose-version-3/conf/apim/repository/conf/deployment.toml
@@ -1,6 +1,6 @@
 [server]
-hostname = "tcnct-philco"
-node_ip = "192.168.1.109"
+hostname = "lab-106"
+node_ip = "192.168.1.106"
 #offset=0
 mode = "single" #single or ha
 base_path = "${carbon.protocol}://${carbon.host}:${carbon.management.port}"
@@ -56,13 +56,13 @@ type = "hybrid"
 display_in_api_console = true
 description = "This is a hybrid gateway that handles both production and sandbox token traffic."
 show_as_token_endpoint_url = true
-service_url = "https://tcnct-philco:${mgt.transport.https.port}/services/"
+service_url = "https://lab-106:${mgt.transport.https.port}/services/"
 username= "${admin.username}"
 password= "${admin.password}"
-ws_endpoint = "ws://tcnct-philco:9099"
-wss_endpoint = "wss://tcnct-philco:8099"
-http_endpoint = "http://tcnct-philco:${http.nio.port}"
-https_endpoint = "https://tcnct-philco:${https.nio.port}"
+ws_endpoint = "ws://lab-106:9099"
+wss_endpoint = "wss://lab-106:8099"
+http_endpoint = "http://lab-106:${http.nio.port}"
+https_endpoint = "https://lab-106:${https.nio.port}"
 
 #[apim.cache.gateway_token]
 #enable = true
@@ -112,7 +112,7 @@ analytics_auth_url =["ssl://am-analytics-worker:7712"]
 #type = "failover"
 
 #[apim.key_manager]
-#service_url = "https://tcnct-philco:${mgt.transport.https.port}/services/"
+#service_url = "https://lab-106:${mgt.transport.https.port}/services/"
 #username = "$ref{super_admin.username}"
 #password = "$ref{super_admin.password}"
 #pool.init_idle_capacity = 50
@@ -122,10 +122,10 @@ analytics_auth_url =["ssl://am-analytics-worker:7712"]
 #key_validation_handler_impl = "org.wso2.carbon.apimgt.keymgt.handlers.DefaultKeyValidationHandler"
 
 #[apim.idp]
-#server_url = "https://tcnct-philco:${mgt.transport.https.port}"
-#authorize_endpoint = "https://tcnct-philco:${mgt.transport.https.port}/oauth2/authorize"
-#oidc_logout_endpoint = "https://tcnct-philco:${mgt.transport.https.port}/oidc/logout"
-#oidc_check_session_endpoint = "https://tcnct-philco:${mgt.transport.https.port}/oidc/checksession"
+#server_url = "https://lab-106:${mgt.transport.https.port}"
+#authorize_endpoint = "https://lab-106:${mgt.transport.https.port}/oauth2/authorize"
+#oidc_logout_endpoint = "https://lab-106:${mgt.transport.https.port}/oidc/logout"
+#oidc_check_session_endpoint = "https://lab-106:${mgt.transport.https.port}/oidc/checksession"
 
 #[apim.jwt]
 #enable = true
@@ -141,12 +141,12 @@ analytics_auth_url =["ssl://am-analytics-worker:7712"]
 #[apim.oauth_config]
 #enable_outbound_auth_header = false
 #auth_header = "Authorization"
-#revoke_endpoint = "https://tcnct-philco:${https.nio.port}/revoke"
+#revoke_endpoint = "https://lab-106:${https.nio.port}/revoke"
 #enable_token_encryption = false
 #enable_token_hashing = false
 
 #[apim.devportal]
-#url = "https://tcnct-philco:${mgt.transport.https.port}/devportal"
+#url = "https://lab-106:${mgt.transport.https.port}/devportal"
 #enable_application_sharing = false
 #if application_sharing_type, application_sharing_impl both defined priority goes to application_sharing_impl
 #application_sharing_type = "default" #changed type, saml, default #todo: check the new config for rest api
@@ -169,7 +169,7 @@ allow_credentials = false
 #enable_policy_deploy = true
 #enable_blacklist_condition = true
 #enable_persistence = true
-#throttle_decision_endpoints = ["tcp://tcnct-philco:5672","tcp://tcnct-philco:5672"]
+#throttle_decision_endpoints = ["tcp://lab-106:5672","tcp://lab-106:5672"]
 
 #[apim.throttling.blacklist_condition]
 #start_delay = "5m"
@@ -187,23 +187,23 @@ allow_credentials = false
 #port = 10005
 
 #[[apim.throttling.url_group]]
-#traffic_manager_urls = ["tcp://tcnct-philco:9611","tcp://tcnct-philco:9611"]
-#traffic_manager_auth_urls = ["ssl://tcnct-philco:9711","ssl://tcnct-philco:9711"]
+#traffic_manager_urls = ["tcp://lab-106:9611","tcp://lab-106:9611"]
+#traffic_manager_auth_urls = ["ssl://lab-106:9711","ssl://lab-106:9711"]
 #type = "loadbalance"
 
 #[[apim.throttling.url_group]]
-#traffic_manager_urls = ["tcp://tcnct-philco:9611","tcp://tcnct-philco:9611"]
-#traffic_manager_auth_urls = ["ssl://tcnct-philco:9711","ssl://tcnct-philco:9711"]
+#traffic_manager_urls = ["tcp://lab-106:9611","tcp://lab-106:9611"]
+#traffic_manager_auth_urls = ["ssl://lab-106:9711","ssl://lab-106:9711"]
 #type = "failover"
 
 #[apim.workflow]
 #enable = false
-#service_url = "https://tcnct-philco:9445/bpmn"
+#service_url = "https://lab-106:9445/bpmn"
 #username = "$ref{super_admin.username}"
 #password = "$ref{super_admin.password}"
-#callback_endpoint = "https://tcnct-philco:${mgt.transport.https.port}/api/am/admin/v0.17/workflows/update-workflow-status"
-#token_endpoint = "https://tcnct-philco:${https.nio.port}/token"
-#client_registration_endpoint = "https://tcnct-philco:${mgt.transport.https.port}/client-registration/v0.17/register"
+#callback_endpoint = "https://lab-106:${mgt.transport.https.port}/api/am/admin/v0.17/workflows/update-workflow-status"
+#token_endpoint = "https://lab-106:${https.nio.port}/token"
+#client_registration_endpoint = "https://lab-106:${mgt.transport.https.port}/client-registration/v0.17/register"
 #client_registration_username = "$ref{super_admin.username}"
 #client_registration_password = "$ref{super_admin.password}"
 
@@ -225,7 +225,7 @@ allow_credentials = false
 #from_address = "APIM.com"
 #username = "APIM"
 #password = "APIM+123"
-#hostname = "tcnct-philco"
+#hostname = "lab-106"
 #port = 3025
 #enable_start_tls = false
 #enable_authentication = true
@@ -235,7 +235,7 @@ allow_credentials = false
 #enable_realtime_notifier = true
 #realtime_notifier.ttl = 5000
 #enable_persistent_notifier = true
-#persistent_notifier.hostname = "https://tcnct-philco:2379/v2/keys/jti/"
+#persistent_notifier.hostname = "https://lab-106:2379/v2/keys/jti/"
 #persistent_notifier.ttl = 5000
 #persistent_notifier.username = "root"
 #persistent_notifier.password = "root"
@@ -256,7 +256,7 @@ type = "org.wso2.carbon.identity.core.handler.AbstractIdentityHandler"
 name = "org.wso2.is.notification.ApimOauthEventInterceptor"
 order = 1
 [event_listener.properties]
-notification_endpoint = "https://tcnct-philco:${mgt.transport.https.port}/internal/data/v1/notify"
+notification_endpoint = "https://lab-106:${mgt.transport.https.port}/internal/data/v1/notify"
 username = "${admin.username}"
 password = "${admin.password}"
 'header.X-WSO2-KEY-MANAGER' = "default"
