--- a/06.apache.php.mysqli.pdo.rewrite/docker/docker-compose.yml
+++ b/06.apache.php.mysqli.pdo.rewrite/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         command: mysqld --init-file="/tmp/database/init.sql"
         environment:
             - MYSQL_ROOT_PASSWORD=my-password
-            - MYSQL_DATABASE=redmine
+            - MYSQL_DATABASE=tecnocrata_org
         networks:
             bridge.66.6:
                 ipv4_address: 66.6.0.5
