--- a/06.apache.php.mysqli.pdo.rewrite/docker/php/Dockerfile
+++ b/06.apache.php.mysqli.pdo.rewrite/docker/php/Dockerfile
@@ -5,3 +5,5 @@ RUN a2enmod rewrite && service apache2 restart
 ARG buildno
 
 RUN echo "Build number: $buildno"
+
+RUN docker-php-ext-install mysqli pdo pdo_mysql
