--- a/26.Express-Gateway/docker/docker-compose.yml
+++ b/26.Express-Gateway/docker/docker-compose.yml
@@ -16,7 +16,7 @@ services:
             - "8080:8080"
             - "9876:9876"
         volumes:
-            - /my/own/datadir:/var/lib/eg
+            - express:/var/lib/eg
         networks:
             - backend
         
@@ -37,3 +37,4 @@ networks:
 
 volumes:
     portainer_data:
+    express:
